--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "styled-components": "^4.3.2"
   }
 }
