--- a/create-react-express/client/package.json
+++ b/create-react-express/client/package.json
@@ -6,6 +6,7 @@
   "proxy": "http://localhost:3000/",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "eslint-utils": "^1.4.2",
     "font-awesome": "^4.7.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.10",
